# CS5319-Final-Project-Group-13-Jack-Fox_Michael-Castle_Steve-Ntare

./: CMakeLists.txt  README.md  database.cpp  database.h  main.cpp
Pages/: AIHelperFilter.cpp  AIHelperFilter.h  AIHelperPage.cpp  AIHelperPage.h  AIHelperPipe.cpp  AIHelperPipe.h  ActivitiesPage.cpp  ActivitiesPage.h  ActivitiesPipe.cpp  ActivitiesPipe.h  AddActivityFilter.cpp  AdminPage.cpp  AdminPage.h  Admin_Pipe.cpp  Admin_Pipe.h  AuthenticationFilter.h  BasicParkInformationANDNewsPipe.cpp  BasicParkInformationANDNewsPipe.h  BasicParkInformationPage.cpp  BasicParkInformationPage.h  FeedbackFilter.cpp  FeedbackPage.cpp  FeedbackPage.h  FeedbackPipe.cpp  FeedbackPipe.h  MapsGuidesFilter.cpp  MapsGuidesPage.cpp  MapsGuidesPage.h  MapsGuidesPipe.cpp  MapsGuidesPipe.h  ReviewFeebackFilter.cpp  UpdateNewsFilter.h  User_Pipe.cpp  User_Pipe.h  WeatherFilter.cpp  WeatherFilter.h  WeatherPage.cpp  WeatherPage.h  WeatherPipe.cpp  WeatherPipe.h  (+1 more)
Selected/Pages/: AIHelperPage.h  ActivitiesPage.cpp  ActivitiesPage.h  BasicParkInformationPage.h  HomeScreen.cpp  HomeScreen.h  MapsGuidesPage.h  WeatherPage.cpp  WeatherPage.h  print.h
Unselected/: database.h
Unselected/Pages/: ActivitiesFilter.cpp  ActivitiesFilter.h  AddActivityFilter.h  AuthenticationFilter.cpp  BasicParkInformationANDNewsFilter.cpp  BasicParkInformationANDNewsFilter.h  FeedbackFilter.h  MapsGuidesFilter.h  ReviewFeebackFilter.h  UpdateNewsFilter.cpp  User_Pipe.h
tables/: activities.csv  feedback.csv  info.csv  login.csv
